--- a/package.json
+++ b/package.json
@@ -10,15 +10,13 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "cssnano": "^4.0.1",
-    "postcss-aspect-ratio-mini": "^0.0.2",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-px-to-viewport": "^0.0.3",
-    "postcss-viewport-units": "^0.1.4",
-    "postcss-write-svg": "^3.0.1",
+    "axios": "^0.18.0",
     "vue": "^2.5.2",
+    "vue-i18n": "^8.0.0",
     "vue-router": "^3.0.1",
-    "vux": "^2.9.2"
+    "vuex": "^3.0.1",
+    "vux": "^2.9.2",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -33,20 +31,26 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "cssnano": "^4.0.1",
     "cssnano-preset-advanced": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^2.7.3",
+    "less": "^3.8.0",
     "less-loader": "^4.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
+    "postcss-aspect-ratio-mini": "^0.0.2",
+    "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
+    "postcss-px-to-viewport": "^0.0.3",
     "postcss-url": "^7.2.1",
+    "postcss-viewport-units": "^0.1.4",
+    "postcss-write-svg": "^3.0.1",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
