--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "ethers": "^3.0.26",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.2.1",
     "vue-i18n": "^8.0.0",
